fixed cards shift down when near heap-view

--- a/src/stylesheets/sprint/layout.scss
+++ b/src/stylesheets/sprint/layout.scss
@@ -89,6 +89,7 @@ figcaption {
     left: 1rem;
     padding: 0.5rem;
     cursor: pointer;
+    position: absolute;
 }
 
 .sprint-velocity {
